# Cmake-for-beginners

./: CMakeCache.txt  CMakeLists.txt  CmakeCurPath.txt  README.md  func.txt  hello.txt  list.txt  loop.txt  macro.txt  set.txt  var_class.txt  var_dref.txt  var_op.txt  var_ref.txt
subdir_1/: CMakeLists.txt
subdir_2/: inc_mod.cmake
